--- a/Panda_operations.ipynb
+++ b/Panda_operations.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Panda_operations.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBG2MARkxXZQpXS1E970GD",
+      "authorship_tag": "ABX9TyNyCNo8xDAEz2i+aiP5URtj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,10 +88,90 @@
         "sale1"
       ],
       "metadata": {
-        "id": "UyytUWtqqx_h"
+        "id": "UyytUWtqqx_h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c1578b6-aa3c-4210-e8bf-ab5008b40d1d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A    100\n",
+              "B     22\n",
+              "C    550\n",
+              "E    400\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sale2"
+      ],
+      "metadata": {
+        "id": "fQ2T5CzLqy8B",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "01b8770b-0672-42b4-c5e3-17756591b965"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "B    150\n",
+              "C    200\n",
+              "D     50\n",
+              "E    400\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sale1 + sale2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EXrOo3F2tLvh",
+        "outputId": "dda7286b-9715-4a73-cffa-ff3e2b61ed47"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A      NaN\n",
+              "B    172.0\n",
+              "C    750.0\n",
+              "D      NaN\n",
+              "E    800.0\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -99,7 +179,7 @@
         ""
       ],
       "metadata": {
-        "id": "fQ2T5CzLqy8B"
+        "id": "l2wMOd2ZtNwT"
       },
       "execution_count": null,
       "outputs": []
