--- a/Panda_operations.ipynb
+++ b/Panda_operations.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Panda_operations.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNyCNo8xDAEz2i+aiP5URtj",
+      "authorship_tag": "ABX9TyOvtGZrEnX4ls96Q4fOcUvL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,10 +176,98 @@
     {
       "cell_type": "code",
       "source": [
+        "sale1.add(sale2,fill_value=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l2wMOd2ZtNwT",
+        "outputId": "8509652d-03c8-44c3-e7dc-88871d9a9876"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A    100.0\n",
+              "B    172.0\n",
+              "C    750.0\n",
+              "D     50.0\n",
+              "E    800.0\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sale1.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LKbWwirjxRHF",
+        "outputId": "0480ec31-00d8-4e16-91b5-4ec031fb88b1"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sale1.sub(sale2,fill_value=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Up1yBG0CxaVw",
+        "outputId": "3d0e9865-e9ea-4cc0-bd59-ae0494ae7c21"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A    100.0\n",
+              "B   -128.0\n",
+              "C    350.0\n",
+              "D    -50.0\n",
+              "E      0.0\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "l2wMOd2ZtNwT"
+        "id": "pTB6eQfCx3vA"
       },
       "execution_count": null,
       "outputs": []
