--- a/Panda_operations.ipynb
+++ b/Panda_operations.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Panda_operations.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPNBqrNqZ6EDQnUvmWTJil2",
+      "authorship_tag": "ABX9TyOiC7DMjETCYKsIJCu7Jx5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "tk_8CuMRpfFP"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ]
     },
     {
